# AirplayServer-2

airplay/: build.gradle
airplay/src/androidTest/java/com/apple/dnssd/: ExampleInstrumentedTest.java
airplay/src/main/: AndroidManifest.xml
airplay/src/main/cpp/: CMakeLists.txt  jni_raop_server.cpp  log.h
airplay/src/main/cpp/lib/: httpd.c  raop.c  raop.h  raop_handlers.h  raop_rtp.c  raop_rtp_mirror.c  raop_rtp_mirror.h
airplay/src/main/cpp/lib/fdk-aac/libAACdec/src/: aacdecoder.h
airplay/src/main/cpp/lib/fdk-aac/libSYS/include/: FDK_audio.h
airplay/src/main/cpp/lib/plist/: plist.c
airplay/src/main/cpp/mDNSResponder/: CMakeLists.txt  JNISupport.c
airplay/src/main/cpp/mDNSResponder/mDNSShared/: dnssd_clientstub.c  dnssd_ipc.h
airplay/src/main/java/com/apple/dnssd/: DNSSD.java
airplay/src/test/java/com/apple/dnssd/: ExampleUnitTest.java
app/: build.gradle
app/src/main/java/com/fang/myapplication/: DNSNotify.java  NetUtils.java  RaopServer.java
app/src/main/java/com/fang/myapplication/player/: AudioPlayer.java  VideoPlayer.java
